TEST_LIBRARY = \
  pxtest.py

REGTESTS = \
  accounts.py \
  banking.py \
  character_limit.py \
  characters.py \
  combat_damage.py \
  combat_targets.py \
  damage_lists.py \
  fame.py \
  findpath.py \
  getregionat.py \
  godmode.py \
  loot.py \
  mining.py \
  modifiedregions.py \
  movement.py \
  multiupdate.py \
  nullstate.py \
  pending.py \
  prospecting_basic.py \
  prospecting_prizes.py \
  prospecting_resources.py \
  splitstaterpcs.py

EXTRA_DIST = $(REGTESTS) $(TEST_LIBRARY)
TESTS = $(REGTESTS)
