AM_TESTS_ENVIRONMENT = \
  PYTHONPATH=$(PYTHONPATH):$(top_srcdir)

TEST_LIBRARY = \
  pxtest.py

REGTESTS = \
  accounts.py \
  buildings_basic.py \
  buildings_combat.py \
  buildings_construction.py \
  buildings_enterexit.py \
  buildings_foundations.py \
  buildings_inventory.py \
  burnsale.py \
  character_limit.py \
  characters.py \
  charon.py \
  coinops.py \
  combat_aoe.py \
  combat_damage.py \
  combat_effects.py \
  combat_friendly.py \
  combat_targets.py \
  damage_lists.py \
  fame.py \
  findpath.py \
  getbuildingshape.py \
  getserviceinfo.py \
  getregionat.py \
  godmode.py \
  loot.py \
  mining.py \
  modifiedregions.py \
  movement.py \
  multiupdate.py \
  pending.py \
  prospecting_basic.py \
  prospecting_prizes.py \
  prospecting_resources.py \
  safezones.py \
  services_bpcopy.py \
  services_construction.py \
  services_fees.py \
  services_refining.py \
  services_repair.py \
  services_reveng.py \
  splitstaterpcs.py \
  vehiclefitments.py

EXTRA_DIST = $(REGTESTS) $(TEST_LIBRARY)
TESTS = $(REGTESTS)
